high contrast mode and more kindle fixes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -51,3 +51,7 @@ hr.styled-hr:after {
 	font-size: 1.2em;
 	padding: 0 0.25em;
 }
+
+a:visited {
+    color: var(--bs-link-color);
+}
